--- a/vgx/src/resources/WEB-ROOT/artifacts/header.html
+++ b/vgx/src/resources/WEB-ROOT/artifacts/header.html
@@ -27,7 +27,7 @@
     <hr>
     <table id="commonHeaderTable">
         <tr>
-            <td id="logo" rowspan="3"><img id="logoimg" src="logo.gif" alt="VGX Server">
+            <td id="logo" rowspan="3"><img id="logoimg" src="logo_b-x.png" alt="VGX">
             <td class="admininfo c1"><b>Processor</b></td>
             <td class="admininfo c2"><span id="commonCPU"></span></td>
             <td class="admininfo c3"><b>Memory</b></td>
