--- a/pyvgx/constants/resultListEntryConstants.html
+++ b/pyvgx/constants/resultListEntryConstants.html
@@ -26,7 +26,7 @@
 <li><a href="#R_DICT">2.4. pyvgx.R_DICT</a></li>
 </ul>
 </li>
-<li><a href="#resultmetas">3. Result Metas</a>
+<li><a href="#resultmetas">3. Result Meta Information</a>
 <ul class="sectlevel2">
 <li><a href="#R_TIMING">3.1. pyvgx.R_TIMING</a></li>
 <li><a href="#R_COUNTS">3.2. pyvgx.R_COUNTS</a></li>
@@ -117,7 +117,7 @@ by various search methods.</p>
 </div>
 <div class="paragraph">
 <p>If no meta-information is requested the returned result is a list of entries.
-When meta-information is requested with <a href="#R_COUNTS">pyvgx.R_COUNTS</a> or <a href="#R_TIMING">pyvgx.R_TIMING</a> the returned result is a dictionary containing the list of results plus the requested metas.</p>
+When meta-information is requested with <a href="#R_COUNTS">pyvgx.R_COUNTS</a> or <a href="#R_TIMING">pyvgx.R_TIMING</a> the returned result is a dictionary containing the list of results plus the requested meta-information.</p>
 </div>
 </div>
 </div>
@@ -246,10 +246,10 @@ When meta-information is requested with <a href="#R_COUNTS">pyvgx.R_COUNTS</a> o
 </div>
 </div>
 <div class="sect1">
-<h2 id="resultmetas">3. Result Metas</h2>
+<h2 id="resultmetas">3. Result Meta Information</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>When one or more of the following constants are used the result will be a dictionary containing the list of results and the selected metas:</p>
+<p>When one or more of the following constants are used the result will be a dictionary containing the list of results and the selected meta-information:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -367,7 +367,7 @@ When meta-information is requested with <a href="#R_COUNTS">pyvgx.R_COUNTS</a> o
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-10-03 17:15:55 -0400
+Last updated 2025-10-04 12:52:13 -0400
 </div>
 </div>
 </body>
