--- a/pyvgx/service/multinode.html
+++ b/pyvgx/service/multinode.html
@@ -779,6 +779,10 @@ If <code>"*"</code> the plugin functions will be bound to the <a href="#descript
 <p><strong><em>descriptor_file</em></strong>: Full path to a file on disk containing a valid <a href="#system_descriptor">system descriptor</a> in JSON format. Defaults to <code>"vgx.cf"</code>.</p>
 </div>
 </dd>
+</dl>
+</div>
+<div class="dlist">
+<dl>
 <dt class="hdlist1"><a id="pyvgx_vgxinstance_startinstance_func"></a><code>pyvgx.VGXInstance.StartInstance( <em>id</em>, <em>descriptor</em><strong>[</strong>, <em>basedir</em><strong>[</strong>, <em>plugins</em><strong>]]</strong> )</code></dt>
 <dd>
 <p>Initialize, configure and start a VGX Server instance. The instance&#8217;s <em>vgxroot</em> is automatically named <code>&lt;instance.type&gt;_&lt;instance.id&gt;</code>, e.g. "builder_B01".</p>
@@ -910,7 +914,7 @@ Run this to start a service instance</p>
 <dt class="hdlist1"><a href="#service_example_plugin_code">Section 4.4, &#8220;Service Example Plugin Code&#8221;</a></dt>
 <dd>
 <p><code>service/exampleplugin.py</code><br>
-Module containing plugin code used by exampleservice.py</p>
+Module containing plugin code used by <code>exampleservice.py</code></p>
 </dd>
 <dt class="hdlist1"><a href="#service_example_start_instances">Section 4.5, &#8220;Service Example Start Instances&#8221;</a></dt>
 <dd>
@@ -1450,7 +1454,7 @@ Module containing plugin code used by exampleservice.py</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-10-03 17:15:55 -0400
+Last updated 2025-10-04 13:09:44 -0400
 </div>
 </div>
 <script type="text/x-mathjax-config">
