--- a/pyvgx/shortref.html
+++ b/pyvgx/shortref.html
@@ -782,53 +782,53 @@ document.addEventListener("DOMContentLoaded", function() {
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">19</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#md5_func">md5()</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">MD5 of string</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">20</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#meminfo_func">meminfo()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Return basic system memory information</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">21</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">20</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#popcnt_func">popcnt()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Number of bits set to 1 in an integer</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">22</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">21</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#profile_func">profile()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Execute basic system performance benchmark</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">23</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">22</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#rstr_func">rstr()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Return a random string</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">24</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">23</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#selftest_func">selftest()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Run internal self test</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">25</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">24</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#selftest_all_func">selftest_all()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Run all internal self tests</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">26</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">25</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#serialize_func">serialize()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Return a serialized object</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">27</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">26</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#SetOutputStream_func">SetOutputStream()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Redirect log output to file</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">28</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">27</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#sha256_func">sha256()</a></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">sha256 of string</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">28</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="reference.html#strhash128_func">strhash128()</a></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">128-bit hash of string</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">29</p></td>
@@ -2801,7 +2801,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">16</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="vertex/vertexMembers.html#vertexinternalid"><em>v</em>.internalid</a></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Internal identifier (md5)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Internal identifier (strhash128)</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">17</p></td>
@@ -7827,7 +7827,7 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-10-03 17:15:55 -0400
+Last updated 2025-10-04 12:43:29 -0400
 </div>
 </div>
 </body>
