--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><strong>VGX</strong>
-Distributed engine for plugin-based graph and vector search</p>
+<p>Distributed engine for plugin-based graph and vector search</p>
 </div>
 <div class="paragraph">
 <p><strong>Vector Graph indeX</strong> is a high-performance, distributed engine for building custom search and recommendation services using Python plugins. Developers can implement service logic using the <strong>PyVGX</strong> C-extensions, expose it as HTTP endpoints, and automatically scale across a sharded, replicated back-end.</p>
@@ -28,12 +27,50 @@ Distributed engine for plugin-based graph and vector search</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_getting_started">Getting Started</h2>
+<h2 id="_install_pyvgx">Install PyVGX</h2>
 <div class="sectionbody">
 <div class="listingblock">
 <div class="content">
 <pre class="rouge highlight"><code data-lang="bash">pip <span class="nb">install </span>pyvgx</code></pre>
 </div>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>This package includes native C extensions and has the following platform requirements:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Python</strong>: 3.12 or higher</p>
+</li>
+<li>
+<p><strong>macOS</strong>: 14 (Sonoma) or higher</p>
+</li>
+<li>
+<p><strong>Linux</strong>: glibc 2.34 or higher (e.g. Ubuntu 22.04+)</p>
+</li>
+<li>
+<p><strong>Windows</strong>: 10 or higher</p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Ensure your environment meets these requirements before installing.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="sect2">
+<h3 id="_build_instructions">Build Instructions</h3>
+<div class="paragraph">
+<p>You can build the package yourself if needed: <a href="pyvgx/build.html">Instructions here</a>.</p>
 </div>
 <div class="dlist">
 <dl>
@@ -42,6 +79,7 @@ Distributed engine for plugin-based graph and vector search</p>
 <p>An introduction to pyvgx, the Python module used for creating graph algorithms</p>
 </dd>
 </dl>
+</div>
 </div>
 </div>
 </div>
@@ -151,7 +189,7 @@ Distributed engine for plugin-based graph and vector search</p>
 </style>
 
 <div id=footer-container>
-  <p id="update-date">Last updated 2025-10-04 13:30:02 -0400</p>
+  <p id="update-date">Last updated 2025-10-06 20:55:06 -0400</p>
   <p id="legal-notices"><a href="Legal_Notices.html">Legal Notices</a></p>
 </div>
 </body>
